a bug fix to B direction calculation with raw Ne input. Added an option to use flipchem ion compositions.

--- a/doc/ElSpec-manual.tex
+++ b/doc/ElSpec-manual.tex
@@ -543,7 +543,7 @@ NOTICE: either \verb|ppdir| or \verb|fitdir| must be defined.
 
 \item[fitdir] path to the 'standard' GUISDAP fit results.\\
 Default: []\\
-Example: \verb|ElSpec('ppdir','1900-01-02_beata_60@uhfa')|\\
+Example: \verb|ElSpec('fitdir','1900-01-02_beata_60@uhfa')|\\
 NOTICE: either \verb|ppdir| or \verb|fitdir| must be defined. \verb|fitdir| can be also a full path to a Madrigal hdf5 file with EISCAT data. 
 
 \item[experiment] Name of the EISCAT experiment. The argument is used for selecting correct input routine for the raw densities, and is written in the output filename.\\
